tests/snapshots/blank_lines/compound_then_def.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/blank_lines/compound_then_def.input.py
---
blank-lines@215..217
