tests/snapshots/blank_lines/compound_then_def.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/blank_lines/compound_then_def.input.py
---
"""
A compound statement at module level pairs with a following def the
same way any other module-level statement does. The rule normalizes
the gap to 2 blank lines.
"""


for setup in initial_steps:
    setup.run()


def main():
    return 0
