tests/snapshots/blank_lines/decorated_class_with_docstring.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/blank_lines/decorated_class_with_docstring.input.py
---
"""
A class carrying a decorator stack with a first-member docstring binds
the docstring tight against `class Posting:` (0 blank lines) with the
top-level 2-blank cushion measured above the topmost decorator. The
docstring then cushions the next member by 1 blank line per the
existing docstring-predecessor canonical, and the field block cushions
the following method by 1 blank line per the new class-field → method
arm.
"""


@final
@dataclass
class Posting:
    """
    Hold a single posting's normalized fields.
    """

    company: str
    title: str

    def summary(self):
        return f"{self.title} at {self.company}"
