tests/snapshots/blank_lines/decorated_def.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/blank_lines/decorated_def.input.py
---
blank-lines@195..197
