tests/snapshots/blank_lines/decorated_method.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/blank_lines/decorated_method.input.py
---
blank-lines@244..248
