tests/snapshots/blank_lines/def_in_if_body.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/blank_lines/def_in_if_body.input.py
---

